--- a/website/newsletter/265/index.mdx
+++ b/website/newsletter/265/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /265
-title: "React Hebdo #265: React Skills, json-render, ViewTransition, Base UI, shadcn, Store, MDX, GTK | RN Windows/macOS/Harmony, Brownie, Enriched, Navigation, Teleport, Nitro | TC39, Astro, jQuery, Node.js"
+title: "This Week In React #265: React Skills, json-render, ViewTransition, Base UI, shadcn, Store, Apollo, MDX, GTK | RN Windows/macOS/Harmony, Brownie, Enriched, Navigation, Teleport, Nitro | TC39, Astro, jQuery, Node.js"
 authors: [slorber]
 date: 01-21-2026
 ---
@@ -83,7 +83,7 @@ You might wonder why Firefox is the headline of the React section? It turns out 
 - 📦 [Puck 0.21 \- Visual editor for React \- AI page generation, rich text editing, new Plugin interface](https://puckeditor.com/blog/puck-021)
 - 📦 [Warper \- Fast React virtualization library powered by Rust and WebAssembly](https://warper.tech/)
 - 📦 [React Error Boundary 6.1 \- Fix error type (`Error` \-\> `unknown`), add `getErrorMessage(e)` helper](https://github.com/bvaughn/react-error-boundary/releases/tag/6.1.0)
-- 📦 [Apollo Client 4.1](https://github.com/apollographql/apollo-client/releases/tag/%40apollo/client%404.1.0)
+- 📦 [Apollo Client 4.1 - Support for `@stream` directive](https://www.apollographql.com/blog/stream-all-the-things-with-apollo-client-4-1)
 - 🎥 [Maximilian Schwarzmüller \- Is TanStack Start better than Next.js?](https://www.youtube.com/watch?v=JO2L6MfiQtY)
 
 <SubscribeFormEmbed placement="middle" />
