--- a/website/newsletter/266/index.mdx
+++ b/website/newsletter/266/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /266
-title: "This Week In React #266: DoS, shadcn, Skills, Rspack, React Aria, TanStack, Remotion, ChartGPU | Expo 55 beta, Hermes, Router, Widgets, CSS, AI, Bootsplash, Detox | TC39, Rolldown, Yarn, Nodde, Mermaid, Unplugin"
+title: "This Week In React #266: DoS, shadcn, Skills, Rspack, React Aria, TanStack, Remotion, ChartGPU | Expo 55 beta, Hermes, Expo Router, Widgets, CSS, AI, Bootsplash, Detox | TC39, Rolldown, Yarn, Nodde, Mermaid, Unplugin"
 authors: [slorber]
 date: 01-28-2026
 ---
@@ -43,6 +43,7 @@ Stop treating i18n as a deployment bottleneck🛑 **Crowdin** automates your Rea
 - 👀 [React PR \- Init Claude config](https://github.com/facebook/react/pull/35617) \- It seems like the React core team is planning to leverage AI more.
 - 👀 [React-DOM Types PR \- Properly type form-related events](https://github.com/DefinitelyTyped/DefinitelyTyped/pull/74383) \- Narrowing the type of `event.target` to its underlying element, for example, `HTMLInputElement`.
 - 👀 [React Aria PR \- Add `render` prop to allow customizing DOM element](https://github.com/adobe/react-spectrum/pull/9499) \- React Aria chose the render prop pattern (following Ariakia and Base UI) and not the `asChild` pattern popularized by Radix UI.
+- 👀 [TanStack PR - New `@tanstack/meta` package](https://github.com/TanStack/router/pull/6277) - New package coming for composable SEO / meta tags management.
 - 🗓 [React Summit](https://reactsummit.com/?utm_source=thisweekinreact) - 🇳🇱 Amsterdam - 12 & 16 Jun. The world's biggest React conference is back! Knowledge you'll use, people you'll remember, and an after-party you won't forget. Reserve your spot to with promo code TWIR (-10%)
 - 📜 [The Incredible Overcomplexity of the Shadcn Radio Button](http://paulmakeswebsites.com/writing/shadcn-radio-button/) \- A fair criticism, questioning the need for abstraction layers and repurposing HTML elements, instead of just styling `<input type="radio">`.
 - 📜 [Single Flight Mutations in TanStack Start](https://frontendmasters.com/blog/single-flight-mutations-in-tanstack-start-part-1/) \- Explains how to mutate the data and refresh the UI in a single network round trip. The first article shows the big picture with a simple implementation, while the second makes it more robust and scalable using middleware.
